# espy-user-mobility

./: .gitignore  .gitmodules  algorithms.py  custom_serialization.py  geo-parsing.ipynb  main.py  map_build.py  nb_example-msgpack.ipynb  pyproject.toml  run-plots-notebook.sh  scenario_build.py  servers.py  simulate.py  tests.ipynb  user_mobility.py
datasets/: .gitignore
espy-notebooks/: nb_map_grid.ipynb
espy_user_mobility/: algorithms.py  custom_serialization.py  helper_methods.py  map_build.py  scenario_build.py  servers.py  simulate.py
espy_user_mobility/espy-notebooks/: cdf_plots.ipynb  example_msgpack.ipynb  map_grid.ipynb  nb_example-msgpack.ipynb  nb_topology_draw.ipynb  plots_msgpack.ipynb  results_plots.ipynb  run-all-scenarios.sh  topology_draw.ipynb
espy_user_mobility/espy-notebooks/plots/2160-steps/: user_coordinates.mov  user_heatmap.mov
espydeps/: helper_methods.py
notebooks/: creating-migration-algorithm.ipynb  geo-parsing.ipynb  manipulating-components.ipynb  network.ipynb
notebooks/espydeps/: thea_dataset_creation.py
notebooks/tutorials/: automating-experiments.ipynb  creating-placement-algorithm.ipynb  including-custom-system-models.ipynb  loading-datasets.ipynb  manipulating-components.ipynb  monitoring-simulation.ipynb
