[tool.poetry]
name = "espy-user-mobility"
version = "0.1.0"
description = "Reseach project for Master's Thesis"
authors = ["Paulo Roberto Albuquerque <paulora2405@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
matplotlib = "^3.7.2"
pandas = "^1.3"
seaborn = "^0.12"
networkx = "^2.6.2"
msgpack = "^1.0.4"
scikit-learn = "^1.3.2"
mesa = "~1.0.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.2"
black = "^22.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130
